documentacion codigo ultiimo ejercicio

--- a/3.5.CameraObjects/index.html
+++ b/3.5.CameraObjects/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Example 3.5: The Camera Objects Project</title>
+        <title>Ejemplo 3.5: Objetos de camara</title>
         <link rel ="icon" type ="image/x-icon" href="./favicon.png">
 
         <!-- the following says there are javascript source code contained in 
